{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 10,
  "lineage": "c10bcd95-5bec-7ce1-f4a7-1123ee57823a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607657613682:vpc/vpc-0f8179f53a5751f17",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-017d0a3230c37851b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-05860ee4b68bee620",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f8179f53a5751f17",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-027f0f405bbf8ec6f",
            "owner_id": "607657613682"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mi_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:607657613682:loadbalancer/app/alb-proyecto-terraform/4fa905e3ec568ef7",
            "arn_suffix": "app/alb-proyecto-terraform/4fa905e3ec568ef7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-proyecto-terraform-1902725014.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:607657613682:loadbalancer/app/alb-proyecto-terraform/4fa905e3ec568ef7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-proyecto-terraform",
            "security_groups": [
              "sg-08fffc9fb723bdb08"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0257fb942ebc374d4"
              },
              {
                "subnet_id": "subnet-03ab92f6679ece1ba"
              },
              {
                "subnet_id": "subnet-07c84a67ab85760ca"
              },
              {
                "subnet_id": "subnet-0c2ae2d3bf3d535d2"
              },
              {
                "subnet_id": "subnet-0c33c1b74ac194bae"
              },
              {
                "subnet_id": "subnet-0d5cf32c59794063c"
              }
            ],
            "subnets": [
              "subnet-0257fb942ebc374d4",
              "subnet-03ab92f6679ece1ba",
              "subnet-07c84a67ab85760ca",
              "subnet-0c2ae2d3bf3d535d2",
              "subnet-0c33c1b74ac194bae",
              "subnet-0d5cf32c59794063c"
            ],
            "tags_all": {
              "Creador": "Quezada",
              "Proyecto": "Examen-Universidad"
            },
            "vpc_id": "vpc-0f8179f53a5751f17",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:607657613682:listener/app/alb-proyecto-terraform/4fa905e3ec568ef7/a1675a841bdacc60",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:607657613682:targetgroup/tg-proyecto-terraform/554d82d633db0398",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:607657613682:listener/app/alb-proyecto-terraform/4fa905e3ec568ef7/a1675a841bdacc60",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:607657613682:loadbalancer/app/alb-proyecto-terraform/4fa905e3ec568ef7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Creador": "Quezada",
              "Proyecto": "Examen-Universidad"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.mi_alb",
            "aws_lb_target_group.mi_tg",
            "aws_security_group.web_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:607657613682:targetgroup/tg-proyecto-terraform/554d82d633db0398",
            "arn_suffix": "targetgroup/tg-proyecto-terraform/554d82d633db0398",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:607657613682:targetgroup/tg-proyecto-terraform/554d82d633db0398",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-proyecto-terraform",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Creador": "Quezada",
              "Proyecto": "Examen-Universidad"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f8179f53a5751f17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607657613682:security-group/sg-08fffc9fb723bdb08",
            "description": "Permitir HTTP y SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fffc9fb723bdb08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_proyecto_terraform",
            "name_prefix": "",
            "owner_id": "607657613682",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Creador": "Quezada",
              "Proyecto": "Examen-Universidad"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8179f53a5751f17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}